# yt-dl-service

./: .gitignore  CHANGELOG  Cargo.toml  PKGBUILD  TODO  readme.md  settings.json  yt-dl-service.install
src/: main.rs  settings.rs  watcher.rs
templates/: settings.json  yt-dl-service.service  yt-dl-service.timer
