[package]
name = "yt-dl-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-appender = "0.2.2"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }

